--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Authentication Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,17 @@
   "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "knex": "^0.20.4",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.2"
   }
 }
